recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:18: error: not found: value occurences
    return 1+occurences(l.tail,v)
             ^